<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">MaReu</string>
    <string name="settings">settings</string>

    <!-- filtres -->
    <string name="Filtrer_par_date">Filtrer par date</string>
    <string name="Filtrer_par_salle">Filtrer par salle</string>
    <string name="Réinitialiser">Réinitialiser</string>


    <string name="rooms">Salles</string>
    <string name="description">%1$s - %2$s - %3$s</string>
    <string name="Salle_Mexico">Salle Mexico</string>
    <string name="Salle_Venise">Salle Venise</string>
    <string name="Salle_Berlin">Salle Berlin</string>
    <string name="Salle_Paris">Salle Paris</string>
    <string name="Salle_Rio">Salle Rio</string>
    <string name="Salle_Moscou">Salle Moscou</string>
    <string name="Salle_Dubai">Salle Dubai</string>
    <string name="Salle_Madrid">Salle Madrid</string>
    <string name="Salle_Quebec">Salle Quebec</string>
    <string name="Salle_New_York">New_York</string>
    <string name="ajout_reunion">ajout_reunion</string>
    <string name="ajout">Ajout</string>
    <string name="mails">Mails</string>
    <string name="heure_r_union">Heure réunion</string>
    <string name="date_r_union">Date réunion</string>
    <string name="salle_de_r_union">Salle de réunion</string>
    <string name="sujet_de_la_r_union">Sujet de la réunion</string>
    <string name="planifions_notre_r_union_chez_lamzone">Planifions notre réunion chez Lamzone</string>
    <string name="myreu">MyReu</string>
    <string name="menu">menu</string>
    <string name="bydate">bydate</string>
    <string name="bymeetingroom">bymeetingroom</string>
    <string name="resetlist">resetlist</string>
    <string name="deletebutton">deletebutton</string>
    <string name="circle">circle</string>
    <string name="addmeeting">addmeeting</string>
    <string name="ma_liste_de_r_unions">Ma liste de réunions</string>
    <string name="mails_des_participants">Mails des participants</string>
    <string name="filtrer_par_date">Filtrer par date</string>
    <string name="r_initialisation_filtres">Réinitialisation Filtres</string>
    <string name="veuillez_s_lectionner_une_salle">Veuillez sélectionner une salle :</string>
    <string name="todo" tools:ignore="DuplicateDefinition">TODO</string>

    <string-array name="meeting_room_list">
        <item>New York</item>
        <item>Paris</item>
        <item>Vienne</item>
        <item>Rio</item>
        <item>Yaoundé</item>
        <item>berlin</item>
        <item>Rome</item>
        <item>Madrid</item>
        <item>Londres</item>
        <item>Dublin</item>
    </string-array>


</resources>