<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/ic_baseline_filter_alt_24"
        android:orderInCategory="0"
        android:iconTint="@color/GreyWhite"
        app:showAsAction="ifRoom"
        android:title="@string/menu"
        >

        <menu>
            <item
                android:orderInCategory="1"
                android:title="@string/bydate"
                app:showAsAction="never" />
            <item
                android:orderInCategory="2"
                android:title="@string/bymeetingroom"
                app:showAsAction="never" />
            <item
                android:orderInCategory="3"
                android:title="@string/resetlist"
                app:showAsAction="never" />
        </menu>

    </item>

</menu>